--- a/hotstar.css
+++ b/hotstar.css
@@ -1,25 +1,45 @@
-body {
-    background-color: #f3f2ef;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.header {
+body {
     width: 100%;
+    background-color: #0c111b;
+    display: flex;
+    font-family: sans-serif;
+}
+
+.navebar {
+    width: 100%;
+    height: 80px;
     display: flex;
     position: sticky;
     top: 0;
     z-index: 999;
-    justify-content: space-evenly;
-    border-bottom: 0.1px solid lightgray;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: blue;
+    padding: 0 4%;
+    background-color: #0c111b;
+    align-items: center;
+}
+
+.logo img {
+    height: 40px;
+}
+
+.title a {
+    text-decoration: none;
+    margin-left: 20px;
+    color: #fff;
+    text-transform: capitalize;
+}
+
+.dropdown {
+    display: inline-block;
 }
 
 .dropbtn {
-    background-color: #000;
+    background-color: #0c111b;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -27,29 +47,26 @@ body {
     cursor: pointer;
 }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
+
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: black;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1
+    background-color: green;
 }
 
 .dropdown:hover .dropdown-content {
@@ -57,5 +74,45 @@ body {
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: orange;
+}
+
+.right_cont {
+    display: block;
+    margin-left: auto;
+}
+
+.search-box {
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: transparent;
+    outline: none;
+    height: 30px;
+    color: white;
+    width: 250px;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 500;
+
+}
+
+.sub-btn {
+    background: #1f80e0;
+    height: 30px;
+    padding: 0 20px;
+    color: #fff;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 13px;
+    margin: 0 10px;
+}
+
+.login-link {
+    color: #fff;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 700;
 }
