--- a/hotstar.css
+++ b/hotstar.css
@@ -8,6 +8,7 @@ body {
     width: 100%;
     background-color: #0c111b;
     display: flex;
+    position: relative;
     font-family: sans-serif;
 }
 
@@ -15,7 +16,7 @@ body {
     width: 100%;
     height: 80px;
     display: flex;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 999;
     padding: 0 4%;
@@ -115,4 +116,64 @@ body {
     text-decoration: none;
     font-size: 15px;
     font-weight: 700;
+}
+.carousel-container{
+    position: relative;
+    width: 100%;
+    height: 450px;
+    padding: 20px 0;
+    overflow-x: hidden;
+    margin-top: 80px;
+}
+
+.carousel{
+    display: flex;
+    width: 92%;
+    height: 100%;
+    position: relative;
+    margin: auto;
+}
+
+.slider{
+    flex: 0 0 auto;
+    margin-right: 30px;
+    position: relative;
+    background: rgba(0, 0, 0,0.5);
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    transition: 1s;
+    overflow: hidden;
+}
+
+.slider img{
+    width: 70%;
+    min-height: 100%;
+    object-fit: cover;
+    display: block;
+    margin-left: auto;
+}
+
+.slide-content{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    z-index: 2;
+    background: linear-gradient(to right, #030b17 80%, #0c111b00);
+    color: #fff;
+}
+
+.movie-title{
+    padding-left: 50px;
+    text-transform: capitalize;
+    margin-top: 80px;
+}
+
+.movie-des{
+    width: 80%;
+    line-height: 30px;
+    padding-left: 50px;
+    margin-top: 30px;
+    opacity: 0.8;
 }
