--- a/hotstar.css
+++ b/hotstar.css
@@ -73,7 +73,7 @@ body {
 }
 
 .dropdown:hover .dropbtn {
-    background-color: orange;
+    background-color: black;
 }
 
 .right_cont {
@@ -174,4 +174,51 @@ body {
     padding-left: 50px;
     margin-top: 30px;
     opacity: 0.8;
+}
+.fotter{
+    width: 100%;
+    height: 100px; 
+    background-color: transparent;
+    padding: 0px 25px;
+
+}
+.links{
+    padding-left: 25px;
+}
+.links a{
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    font-size: small;
+}
+.content{
+    color: white;
+    padding:10px 25px;
+    font-size: small;
+}
+.social p{
+    text-align: center;
+    margin-left: 400px;
+    color: white;
+}
+.social-logo{
+    text-align: center;
+    margin-left: 400px;
+   position: relative;
+   bottom: 30px;
+   font-size: 30px;
+   color: white;
+}
+.dis{
+float: right;
+position: relative;
+bottom: 10px;
+padding-right: 25px;
+}
+.play img{
+width: 100px;
+height: 50px;
+float: right ;
+position: relative;
+bottom: 70px;
 }
