--- a/hotstar.css
+++ b/hotstar.css
@@ -116,7 +116,7 @@ body {
     font-weight: 700;
 }
 .carousel-container{
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 450px;
     padding: 20px 0;
