--- a/hotstar.css
+++ b/hotstar.css
@@ -181,6 +181,8 @@ body {
     background-color: #0c111b;
     padding: 0px 25px;
     position: relative;
+    /* position: fixed;
+    bottom: 0px; */
 }
 .links{
     padding-left: 25px;
@@ -408,4 +410,24 @@ bottom: 70px;
 
 .video-card:hover .video-card-image{
     display: none;
+}
+.mobile-footer{
+    width: 100%;
+    height: 50px; 
+    background-color:#0c111b;
+    padding: 0px 25px;
+    position: fixed;
+    bottom: 0px; 
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style: none;
+    color: white;
+}
+.mobile-footer h3{
+    display: flex;
+}
+.fott-logo{
+    height: 50px;
+    width: 100px;
 }
