--- a/hotstar.css
+++ b/hotstar.css
@@ -470,9 +470,12 @@ body {
         bottom: 0px;
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-between;
         list-style: none;
         color: white;
+    }
+    .gap{
+      text-align: center;
     }
 
     .mobile-footer h3 {
@@ -481,7 +484,7 @@ body {
 
     .fott-logo {
         height: 30px;
-        width: 30%;
+        width: 90%;
     }
 
     .title {
