--- a/hotstar.css
+++ b/hotstar.css
@@ -394,7 +394,7 @@ body {
     position: relative;
     width: 92%;
     margin: auto;
-    height: 10vw;
+    height: 150px;
     display: flex;
     margin-bottom: 20px;
     justify-content: space-between;
