--- a/hotstar.css
+++ b/hotstar.css
@@ -26,7 +26,7 @@ body {
     height: 40px;
 }
 
-.title a {
+.navebar-title a {
     text-decoration: none;
     margin-left: 20px;
     color: #fff;
